<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="donation_start">Donate!</string>
    <string name="account_information">Account</string>
    <string name="donation_list">Donation List</string>
    <string name="faq">FAQ</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="congratulations">Congratulations!</string>
    <string name="congratulations_small">You have finished posting a donation!</string>
    <string name="share">Share on Facebook</string>
    <string name="congratulations_id">Share on Facebook</string>
    <string name="go_to_donation"> Go to Donation </string>
    <string name="donation_start_title">Title</string>
    <string name="app_name">Food Finder</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_title">TitleActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_field">Title</string>
    <string name="forward_button">Forward!</string>
    <string name="faq_description">About Food Finder</string>
    <string name="created_by_cal_blueprint">Created by Cal Blueprint</string>
    <string name="faq_link">Organization Website</string>
    <string name="cancel_pickup">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="picked_up">Picked Up</string>





    <string name="GEOCODER_API_KEY">AIzaSyCnJmnYV5n961YR8DYSOivhsPdx76Zp0lY</string>

    <!-- Location Fragment -->
    <string name="address">Address</string>
    <string name="confirm_location">CONFIRM LOCATION</string>

    <!-- Form Fragment -->
    <string name="kind">Kind</string>
    <string name="weight">Weight</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="photo">Take Photo</string>
    <string name="pickup_button">SCHEDULE PICKUP</string>
    <string name="phone_number_header">Phone number</string>
    <string name="phone_number">(XXX)XXX-XXXX</string>
    <string name="donation_weight">pounds</string>
    <string name="weight_hint">5</string>
    <string name="kind_hint">20 Breakfast Burritos</string>
    <string name="start_time_hint">Start Time</string>
    <string name="end_time_hint">Pick up by</string>
    <string name="release_photo">Release to view photo</string>
    <string name="address_hint">Address</string>

    <string name="name_header">Name</string>
    <string name="email_header">Email</string>
    <string name="organization_header">Organization</string>
    <string name="phone_header">Phone Number</string>
    <string name="social_media">Share with social networks</string>

    <string-array name="states">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Marianas Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Virgin Islands</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <string name="title_activity_login">Login</string>
    <string name="user">Email</string>
    <string name="pass">Password</string>
    <string name="login_button">Log In</string>
    <string name="app_id">223792107810969</string>

    <!--Fonts -->
    <string name="proxima_nova_regular">fonts/Mark Simonson - Proxima Nova Alt Regular.otf</string>
    <string name="proxima_nova_light">fonts/Mark Simonson - Proxima Nova Alt Light.otf</string>

    <!--Long Text -->
    <string name="faq_description_text">This application lets you donate your
        excess food to local organizations serving the hungry. Just let us know
        what it is and how much and we will work on getting it picked up and
        delivered to someone ASAP.</string>

    <string name="pickup_list_url">http://feeding-forever.herokuapp.com/api/pickups/?access_token=</string>


</resources>
