<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/faq"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/faq"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/about_feeding_forward"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/faq_description"
        android:layout_gravity="left"/>
    <TextView
        android:id="@+id/about_description"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/faq_description_text"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/ff_link"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/faq_link"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:background="@drawable/green_button"
        android:layout_marginTop="20dp" />
    <TextView
        android:id="@+id/created_by_cal_blueprint"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/created_by_cal_blueprint"
        android:layout_gravity="left"/>

</LinearLayout>