<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.blueprint.ffandroid.LoginActivity$PlaceholderFragment"
    android:orientation="vertical"
    android:background="@color/white">


    <ImageView
            android:layout_width="300dp"
            android:layout_height="163dp"
            android:id="@+id/imageView"
            android:background="@drawable/feedingforwardlogowithtext"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"/>
    <EditText
        android:id="@+id/username"
        android:hint="@string/user"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/pass"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/login_button"
        android:text="@string/login_button"
        android:onClick="attemptLogin"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:background="@drawable/green_button"
        android:layout_marginTop="20dp"/>

</LinearLayout>
